[gd_scene load_steps=5 format=3 uid="uid://ddg1hwbx1w5xl"]

[ext_resource type="Script" path="res://Kleo Game Scripts/Character.gd" id="1_igum2"]
[ext_resource type="PackedScene" uid="uid://c7ejmxrhcb08p" path="res://Kleo Game Scenes/new_revolver_good.tscn" id="2_t7emm"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_v3ad5"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1812g"]

[node name="Character" type="CharacterBody3D"]
script = ExtResource("1_igum2")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_v3ad5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_1812g")

[node name="CameraRoot" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="CameraRoot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.631373, 0)
fov = 100.0

[node name="plchld_revolver_better" parent="CameraRoot/Camera3D" instance=ExtResource("2_t7emm")]
transform = Transform3D(-0.15, 0, -2.26494e-08, 0, 0.15, 0, 2.26494e-08, 0, -0.15, 0.591212, -0.344403, -0.400833)

[node name="RayCast3D" type="RayCast3D" parent="CameraRoot/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.00394)
target_position = Vector3(0, 0, -100)
collide_with_areas = true
debug_shape_custom_color = Color(0.670588, 0, 0, 1)

[node name="RayCastEnd" type="Node3D" parent="CameraRoot/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -101.004)
